# Termy

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_ZH.md  esbuild.config.mjs  eslint.obsidian.config.js  manifest.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  tsconfig.test.json  versions.json
.github/workflows/: README.md  ci.yml  release.yml
homebrew/: termy-server.rb
rust-servers/: Cargo.toml
rust-servers/src/: main.rs  router.rs  server.rs
rust-servers/src/pty/: mod.rs  session.rs
scripts/: install-dev-reload.js  install-dev.js  package-plugin.js  release-notes.js  release-notes.test.js  terminal-image-style.test.js
src/: main.ts
src/i18n/: types.ts
src/i18n/locales/: en.ts  ja.ts  ko.ts  ru.ts  zh-CN.ts
src/services/agentStatus/: agentScanner.test.ts  agentScanner.ts  agentStatusNotifications.test.ts  agentStatusNotifications.ts  agentStatusService.ts  codexRateLimits.test.ts  codexRateLimits.ts  creditProgress.test.ts  creditProgress.ts  creditScanner.test.ts  creditScanner.ts  hookState.ts  runtime.ts  types.ts
src/services/context/: agentContext.test.ts  agentContext.ts  agentContextBridge.ts
src/services/ideBridge/: ideBridge.ts
src/services/server/: binaryDownloadUrls.ts  binaryDownloader.test.ts  index.ts  ptyClient.ts  serverManager.ts  types.ts
src/services/terminal/: aiLauncherCatalog.test.ts  aiLauncherCatalog.ts  aiLauncherStatus.test.ts  aiLauncherStatus.ts  childProcessUtils.ts  claudeCodeTuiSupport.test.ts  claudeCodeTuiSupport.ts  (+41 more)
src/settings/: settings.test.ts  settings.ts  settingsTab.ts
(+20 files in other folders)
